crates/core/src/snapshots/core__query__tests__select_order_by_name_limit_5-2.snap
---
source: crates/core/src/query.rs
expression: result.cost
---
Cost {
    rows_processed: 3394,
}
