crates/core/src/snapshots/core__query__tests__select_species_and_animals_left_outer.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "animal_id": null,
    "animal_name": null,
    "species_id": 3,
    "species_name": "bird"
  }
]
