crates/core/src/snapshots/core__query__tests__select_track_album_and_artist.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "Name": "Collision",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Stripsearch",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Last Cup Of Sorrow",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Naked In Front Of The Computer",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Helpless",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Mouth To Mouth",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Ashes To Ashes",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "She Loves Me Not",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Got That Feeling",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  },
  {
    "Name": "Paths Of Glory",
    "Title": "Album Of The Year",
    "artist.Name": "Faith No More"
  }
]
