crates/core/src/snapshots/core__query__tests__single_row_aggregate.snap
---
source: crates/core/src/query.rs
expression: result.to_json()
---
[
  {
    "sum": 1378778040
  }
]
